# Mahek-Gupta

./: README.md  bragging.ipynb  cnn.ipynb  deblurring.ipynb  descision.ipynb  logreg2.ipynb  manas.ipynb  my.ipynb  mykcluster.ipynb  mylogic.ipynb  new2.ipynb  nueral.ipynb  output.csv  schematicsegentation.ipynb
.ipynb_checkpoints/: nueral-checkpoint.ipynb
bragging/: trial2.ipynb
chat/install/: local_setup.sh  setup.sh
chat/install/group_chat/lib/group_chat/: chat_node  chat_node_1  chat_node_2  my_chat_node_1  my_chat_node_2
chat/install/group_chat/share/ament_index/resource_index/parent_prefix_path/: group_chat
chat/install/group_chat/share/group_chat/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
chat/install/group_chat/share/group_chat/cmake/: group_chatConfig.cmake
chat/install/group_chat/share/group_chat/launch/: chat_group.launch.py
chat/log/: latest_build  latest_list
chat/src/group_chat/: CMakeLists.txt
chat/src/group_chat/src/: chat_node.cpp  my_chat_node_1.cpp  my_chat_node_2.cpp
decision/: scratch.ipynb
logreg/: mylogic.ipynb
open cv/: my.py  player.py
path/install/: local_setup.sh  setup.sh
path/install/path/share/ament_index/resource_index/parent_prefix_path/: path
path/install/path/share/path/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
path/install/path/share/path/launch/: map_launch.py
path/install/path/share/path/maps/: map.yaml
path/log/: latest_build  latest_list
